# practice

./: CMakeLists.txt  ITask.h  Practice.h  Task1.h  main.cpp  online.txt
resources/: README.md  Task11a.txt  workers.txt
tasks/: Homework.h  Task1.h  Task10.h  Task11.h  Task12.h  Task13.h  Task14.h  Task15.h  Task2.h  Task3.h  Task4.h  Task5.h  Task6.h  Task7.h  Task8.h  Task9.h
