cmake_minimum_required(VERSION 3.29)
project(unnamed)

set(CMAKE_CXX_STANDARD 20)

add_executable(unnamed main.cpp
        tasks/Task1.h
        ITask.h
        Practice.h
        tasks/Homework.h
        tasks/Task2.h
        tasks/Task2.h
        tasks/Task3.h
        tasks/Task4.h
        tasks/Task5.h
        tasks/Task6.h
        tasks/Task7.h
        tasks/Task8.h
        tasks/Task9.h
        tasks/Task10.h
        tasks/Task11.h
        tasks/Task12.h
        tasks/Task13.h
        tasks/Task14.h
        tasks/Task15.h)
